--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ piston2d-graphics        = "0.40.0"
 pistoncore-glutin_window = "0.69.0"
 piston2d-opengl_graphics = "0.78.0"
 rand                     = "0.8.4"
+rand_chacha              = "0.3.1"
 decorum                  = "0.3.1"
+# piston_window            = "0.120.0"
