Pretty colors and new fishes all day

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ pistoncore-glutin_window = "0.69.0"
 piston2d-opengl_graphics = "0.78.0"
 rand                     = "0.8.4"
 rand_chacha              = "0.3.1"
+rand_distr               = "0.4.2"
 decorum                  = "0.3.1"
 random-branch            = "0.1.1"
